alterated width of divPai

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="public/user.ico" type="image/x-icon">
   </head>
   <body>
-    <div class="w-full flex flex-col items-center bg-[#202020] pt-[60px] pb-[60px]">
+    <div class=" flex flex-col items-center bg-[#202020] pt-[60px] pb-[60px]">
       <div class="w-[800px] bg-[#fff] rounded-md montserrat p-[40px]" id="divPai">
         <div
           class="flex justify-center text-5xl pb-[50px] text-[#0C86E3] font-semibold"
@@ -163,7 +163,7 @@
             </div>
             <div class="pt-[20px]">
               <p class="text-xl">Telefone <span class="text-[red]">*</span></p>
-              <div class="flex border-b border-[#A7A7A7]">
+              <div class="flex border-b border-black">
                 <input
                   type="text"
                   class="w-full pt-[10px] outline-none text-xl"
