--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     />
     <link rel="shortcut icon" href="public/user.ico" type="image/x-icon">
   </head>
-  <body>
-    <div class=" flex flex-col items-center bg-[#202020] pt-[60px] pb-[60px]">
+  <body class="bg-[#202020] relative">
+    <div class="flex justify-center pb-[60px]">
       <div class="w-[800px] bg-[#fff] rounded-md montserrat p-[40px]" id="divPai">
         <div
           class="flex justify-center text-5xl pb-[50px] text-[#0C86E3] font-semibold"
@@ -124,7 +124,8 @@
                 />
               </div>
               <div class="pt-[10px]">
-                <p class="text-[#D13100] naoExibir" id="textErroData">Escreva uma data válida.</p>
+                <p class="text-[#D13100] naoExibir" id="textErroAno">Escreva uma ano válido.</p>
+                <p class="text-[#D13100] naoExibir" id="textErroDia">Escreva um dia válido</p>
               </div>
             </div>
             <div class="pt-[20px]">
@@ -215,14 +216,21 @@
               </div>
             </div>
             <div class="flex justify-center pt-[40px]">
-              <button class="w-full bg-[#0C86E3] rounded-md">
-                <p class="text-white font-semibold text-2xl py-[20px]">
-                  Criar conta
-                </p>
-              </button>
+              <input 
+              type="submit" 
+              class="flex bg-[#0C86E3] text-white font-semibold text-2xl px-[40px] py-[15px] rounded-md" 
+              value="Criar conta"
+              onclick="validarDados()"
+              >
+              </div>
             </div>
-            </div>
-        </form>
+          </form>
+
+          <div class="closeModal w-[400px] flex flex-col items-center bg-[#fff] rounded-md pt-[20px] pb-[20px]" id="modal">
+            <h1 class="text-3xl text-[#0C86E3] font-semibold">Conta criada com sucesso</h1>
+            <i class="bi bi-check2-circle text-[#0C86E3] text-5xl pt-[20px]"></i>
+          </div>
+          <div class="bg-[#ACACAC] w-full h-full divSob naoExibir" id="divSob"></div>
     </div>
   </body>
   <script src="script.js"></script>
