modified width of modal

--- a/index.html
+++ b/index.html
@@ -95,8 +95,6 @@
                   required
                 />
                 <select
-                  name="#"
-                  id=""
                   class="w-[150px] h-[50px] pt-[10px] outline-none border rounded-md text-xl text-center"
                   required
                 >
@@ -218,7 +216,7 @@
             <div class="flex justify-center pt-[40px]">
               <input 
               type="submit" 
-              class="flex bg-[#0C86E3] text-white font-semibold text-2xl px-[40px] py-[15px] rounded-md" 
+              class="flex bg-[#0C86E3] text-white font-semibold text-2xl px-[40px] py-[15px] rounded-md cursor-pointer" 
               value="Criar conta"
               onclick="validarDados()"
               >
@@ -226,7 +224,7 @@
             </div>
           </form>
 
-          <div class="closeModal w-[400px] flex flex-col items-center bg-[#fff] rounded-md pt-[20px] pb-[20px]" id="modal">
+          <div class=" closeModal w-[400px] flex flex-col items-center bg-[#fff] rounded-md pt-[20px] pb-[20px]" id="modal">
             <h1 class="text-3xl text-[#0C86E3] font-semibold">Conta criada com sucesso</h1>
             <i class="bi bi-check2-circle text-[#0C86E3] text-5xl pt-[20px]"></i>
           </div>
